# git-depth

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
src/: git-depth.rc.in  main.cpp
